# Ag_Analista

./: .env.example  .gitignore  app.py  auth_service.py  chat_manager.py  monitor_campanhas.py  pyproject.toml  requeriments.txt  requirements.txt
custom_uploader/frontend/: index.html
prompts/: analista.md
