[project]
name = "agentrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "agno==1.8.0",
    "aiofiles>=24.1.0",
    "fastapi>=0.116.1",
    "openai>=1.99.7",
    "pymysql>=1.1.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.48.0",
    "mysql-connector-python>=8.0.33"
   
]
